<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ebook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="the_text">"Зависимость от компьютерных игр
\n
\nВзгляды на компьютерную зависимость современных психологов и психиатров, моей точки зрения, разделяются на три типа. 
\nВ отечественной психиатрии и наркологии принято смотреть на компьютерную зависимость так же, как и на зависимость от психоактивных веществ – как на болезнь.
\n
\nВ качестве лечения предлагается запрет на компьютерные игры и «заместительная терапия» психотропными препаратами.
\nВторой взгляд – трактовка зависимости от виртуальных игр через примитивную биологическую систему. Создатели компьютерных игр… играют на человеческих слабостях и формируют у игрока рефлекторное поведение. В этой логике геймер – нечто вроде «собаки Павлова» за компьютером.
\n
\nТретий взгляд, не прижившийся в общем сознании, рассматривает зависимость от игры как попытку подмены человеком каких-то важнейших внутренних психологических потребностей. Игра – своего рода «ароматизатор, идентичный натуральному».
\n
\nВ этой статье мы попытаемся представить именно третий взгляд на проблему зависимости от компьютерных игр. Сразу оговорюсь, что речь пойдет о шутерах от первого лица, «Doom- обазных играх» или попросту «ходилках-стрелялках», поскольку именно они являются наиболее популярными, то есть наиболее привлекательными для потребителя. 
\n
\nИгра как «положительное подкрепление»
\n
\nСегодня модно рассуждать о зависимости от компьютерных игр с помощью «теория оперантного научения» Б.Ф. Скиннера. При этом, правда, забывается, что теория эта, превратившись в метод принудительного перевоспитания, принесла множество бед и не нашла практических подтверждений. 
\n
\n«Оперантное научение» может, конечно, изменить поведение человека, но лишь на время его нахождения в зависимости от психолога (добровольной или вынужденной). Выходя из тюрьмы или из реабилитационного центра, использовавшего методы Скиннера, люди возвращались к привычным до этого формам поведения, – смотрите «Заводной апельсин» Стенли Кубрика. 
\nСмысл объяснения виртуальной зависимости в свете теории Скиннера заключается в том, что человек, продвигаясь по уровням компьютерной игры, получает «подкрепления» – маленькие психологические удовольствия, возникающие в результате выигрыша или победы. Возникновение зависимости от игры объясняется тем, что в реальной жизни человек получает гораздо меньше «подкреплений», а в игре он может получать их постоянно. 
\nОднако те же самые «маленькие удовольствия» мы все можем получить, играя в настольные игры, решая кроссворд, спускаясь с горы на лыжах и т.д. Все это сегодня ничуть не менее доступно, чем виртуальная игра. Так почему же человек выбирает именно виртуальный мир и виртуальные «подкрепления»? Приверженцы концепции Скиннера не дают ответа на этот вопрос. "    </string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="image_button">Line</string>
    <string name="button">E-book</string>
    <string name="menu_e_book">E-book</string>
    <string name="menu_form">Form</string>
    <string name="menu_music">Music</string>
    <string name="menu_image">Image</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="dummy">Dummy</string>
    <string name="wikipedia">wikipedia</string>
    <string name="send">Send</string>
    <string name="your_phone">Your phone</string>
    <string name="your_lastname">Your lastname</string>
    <string name="your_name">Your name</string>
    <string name="main_menu">Main_menu</string>
    <string name="clear_canvas">Clear</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="choose_image">Choose image</string>
    <string name="clear_image">Clear image</string>
    <string name="statistics">Statistics</string>

</resources>